--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ nav {
     padding: 20px 20px;
     /* background-color: var(--bgcolor); */
     color: var(--textColor);
+    align-items: center;
 }
 
 nav h1 {
@@ -357,7 +358,8 @@ button{
         width: 90%;
     }
     .image-container {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+        width: 80%;
     }
     #col3{
         display: none;
